--- a/src/AdminLostFoundDetails.html
+++ b/src/AdminLostFoundDetails.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Item Details</title>
-  <script type="module" crossorigin src="../assets/adminLostFoundDetails-Bq6QzV0m.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-C5bWaft0.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-Ckdx90NO.css">
+  <script type="module" crossorigin src="../assets/adminLostFoundDetails-DEW_iqMD.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-DwWyDh1G.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-BHgsM5Wj.css">
 </head>
 
 <body
@@ -292,6 +292,47 @@
                 </div>
             </div>
         </div>
+
+        <!-- Matched Found Item Card (only shown if status is 'Found') -->
+        <div id="matchedFoundItemCard" class="mt-8 hidden">
+            <div class="bg-white dark:bg-gray-800 rounded-xl shadow-xl p-6 border-t-4 border-green-500">
+                <h3 class="text-lg font-bold mb-4 pb-2 flex items-center gap-2 text-gray-800 dark:text-white">
+                    <i class="fas fa-link text-green-500 text-xl"></i>
+                    <span>Matched Found Item</span>
+                </h3>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                    <div class="bg-green-50 dark:bg-green-900/10 p-4 rounded-lg border-l-4 border-green-500">
+                        <span
+                            class="block text-green-600 dark:text-green-400 text-xs uppercase tracking-wider font-bold mb-2">
+                            <i class="fas fa-fingerprint mr-1"></i>Found Item ID
+                        </span>
+                        <span class="font-mono text-sm text-gray-800 dark:text-gray-200" id="matchedFoundId">--</span>
+                    </div>
+                    <div class="bg-blue-50 dark:bg-blue-900/10 p-4 rounded-lg border-l-4 border-blue-500">
+                        <span
+                            class="block text-blue-600 dark:text-blue-400 text-xs uppercase tracking-wider font-bold mb-2">
+                            <i class="fas fa-box mr-1"></i>Item Name
+                        </span>
+                        <span class="font-semibold text-gray-800 dark:text-gray-200" id="matchedFoundItemName">--</span>
+                    </div>
+                    <div class="bg-purple-50 dark:bg-purple-900/10 p-4 rounded-lg border-l-4 border-purple-500">
+                        <span
+                            class="block text-purple-600 dark:text-purple-400 text-xs uppercase tracking-wider font-bold mb-2">
+                            <i class="fas fa-tag mr-1"></i>Item Type
+                        </span>
+                        <span class="font-semibold text-gray-800 dark:text-gray-200" id="matchedFoundItemType">--</span>
+                    </div>
+                    <div class="bg-yellow-50 dark:bg-yellow-900/10 p-4 rounded-lg border-l-4 border-yellow-500">
+                        <span
+                            class="block text-yellow-600 dark:text-yellow-400 text-xs uppercase tracking-wider font-bold mb-2">
+                            <i class="fas fa-map-marker-alt mr-1"></i>Location Found
+                        </span>
+                        <span class="font-semibold text-gray-800 dark:text-gray-200" id="matchedFoundLocation">--</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- Footer -->
@@ -352,40 +393,64 @@
                 class="inline-block align-bottom bg-white dark:bg-gray-800 rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
                 <div class="bg-white dark:bg-gray-800 px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                     <div class="sm:flex sm:items-start">
-                        <div class="mt-3 text-center sm:mt-0 sm:text-left w-full">
+                        <div
+                            class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-blue-100 dark:bg-blue-900 sm:mx-0 sm:h-10 sm:w-10">
+                            <i class="fas fa-sync-alt text-blue-600 dark:text-blue-300"></i>
+                        </div>
+                        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left w-full">
                             <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-white" id="modal-title">
                                 Update Item Status
                             </h3>
-                            <div class="mt-4">
+                            <div class="mt-2">
+                                <p class="text-sm text-gray-500 dark:text-gray-400 mb-4">
+                                    Change the status of this item and provide feedback/instructions for the user.
+                                </p>
+
+                                <!-- Status Dropdown -->
                                 <label for="modalStatusSelect"
-                                    class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">
-                                    New Status
-                                </label>
+                                    class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">New
+                                    Status</label>
                                 <select id="modalStatusSelect"
-                                    class="w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md bg-white dark:bg-gray-700 text-gray-900 dark:text-white">
-                                    <option value="Lost">Lost</option>
+                                    class="w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white sm:text-sm">
+                                    <option value="Lost">Lost (Open)</option>
                                     <option value="Claim">Claim (Potential Match)</option>
-                                    <option value="Found">Found (Returned)</option>
+                                    <option value="Found">Found (Returned to Owner)</option>
                                 </select>
 
+                                <!-- Found Item ID Field (only for 'Found' status) -->
+                                <div id="foundItemIdContainer" class="mt-4 hidden">
+                                    <label for="modalFoundItemId"
+                                        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">
+                                        Found Item ID <span class="text-red-500">*</span>
+                                    </label>
+                                    <input type="text" id="modalFoundItemId"
+                                        class="w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md bg-white dark:bg-gray-700 text-gray-900 dark:text-white font-mono text-sm"
+                                        placeholder="Enter the Found Item ID to match...">
+                                    <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">
+                                        This ID must be from an unclaimed found item in the system.
+                                    </p>
+                                    <p id="foundItemIdError" class="mt-1 text-xs text-red-600 dark:text-red-400 hidden">
+                                    </p>
+                                </div>
+
+                                <!-- Reason Textarea -->
                                 <label for="modalStatusReason"
-                                    class="block text-sm font-medium text-gray-700 dark:text-gray-300 mt-4 mb-2">
-                                    Message / Reason
-                                </label>
+                                    class="block text-sm font-medium text-gray-700 dark:text-gray-300 mt-4 mb-1">Admin
+                                    Feedback / Message (Required)</label>
                                 <textarea id="modalStatusReason" rows="3"
-                                    class="w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
-                                    placeholder="Enter a message for the user..."></textarea>
+                                    class="w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white sm:text-sm"
+                                    placeholder="e.g., 'A matching item has been found. Please visit the admin office.'"></textarea>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="bg-gray-50 dark:bg-gray-700 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
                     <button type="button" onclick="confirmStatusUpdate()"
-                        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-600 text-base font-medium text-white hover:bg-blue-700 sm:ml-3 sm:w-auto sm:text-sm">
+                        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-600 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm">
                         Update Status
                     </button>
                     <button type="button" onclick="closeStatusModal()"
-                        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 dark:border-gray-600 shadow-sm px-4 py-2 bg-white dark:bg-gray-800 text-base font-medium text-gray-700 dark:text-gray-300 hover:bg-gray-50 dark:hover:bg-gray-700 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+                        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 dark:border-gray-500 shadow-sm px-4 py-2 bg-white dark:bg-gray-800 text-base font-medium text-gray-700 dark:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
                         Cancel
                     </button>
                 </div>
@@ -403,32 +468,38 @@
                 class="inline-block align-bottom bg-white dark:bg-gray-800 rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
                 <div class="bg-white dark:bg-gray-800 px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                     <div class="sm:flex sm:items-start">
-                        <div class="mt-3 text-center sm:mt-0 sm:text-left w-full">
+                        <div
+                            class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 dark:bg-red-900 sm:mx-0 sm:h-10 sm:w-10">
+                            <i class="fas fa-exclamation-triangle text-red-600 dark:text-red-300"></i>
+                        </div>
+                        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left w-full">
                             <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-white" id="modal-title">
-                                Delete Lost Item Report
+                                Delete Item Report
                             </h3>
-                            <div class="mt-4">
+                            <div class="mt-2">
                                 <p class="text-sm text-gray-500 dark:text-gray-400 mb-4">
-                                    This will mark the report as deleted. The user will be notified.
+                                    Are you sure you want to delete this specific lost item report? This action is
+                                    irreversible.
                                 </p>
+
+                                <!-- Reason Textarea -->
                                 <label for="modalDeleteReason"
-                                    class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">
-                                    Reason for Deletion
-                                </label>
+                                    class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Reason for
+                                    Deletion (Required)</label>
                                 <textarea id="modalDeleteReason" rows="3"
-                                    class="w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
-                                    placeholder="Enter reason for deletion..."></textarea>
+                                    class="w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-red-500 focus:border-red-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white sm:text-sm"
+                                    placeholder="e.g., 'Duplicate report', 'Inappropriate content'"></textarea>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="bg-gray-50 dark:bg-gray-700 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
                     <button type="button" onclick="confirmDelete()"
-                        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 sm:ml-3 sm:w-auto sm:text-sm">
-                        Delete Report
+                        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
+                        Delete
                     </button>
                     <button type="button" onclick="closeDeleteModal()"
-                        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 dark:border-gray-600 shadow-sm px-4 py-2 bg-white dark:bg-gray-800 text-base font-medium text-gray-700 dark:text-gray-300 hover:bg-gray-50 dark:hover:bg-gray-700 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+                        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 dark:border-gray-500 shadow-sm px-4 py-2 bg-white dark:bg-gray-800 text-base font-medium text-gray-700 dark:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
                         Cancel
                     </button>
                 </div>
