deploy: 63b6980783adada32e0829ee4802e942cb77c35c

--- a/src/AdminLostFound.html
+++ b/src/AdminLostFound.html
@@ -18,7 +18,7 @@
             color: var(--color-eco-dark);
         }
     </style>
-  <script type="module" crossorigin src="../assets/adminLostFound-DId4t-NB.js"></script>
+  <script type="module" crossorigin src="../assets/adminLostFound-CZDKD7jV.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DwWyDh1G.js">
   <link rel="stylesheet" crossorigin href="../assets/darkMode-BHgsM5Wj.css">
 </head>
@@ -545,6 +545,22 @@
                                     <option value="Claim">Claim (Potential Match)</option>
                                     <option value="Found">Found (Returned to Owner)</option>
                                 </select>
+
+                                <!-- Found Item ID Field (only for 'Found' status) -->
+                                <div id="foundItemIdContainer" class="mt-4 hidden">
+                                    <label for="modalFoundItemId"
+                                        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">
+                                        Found Item ID <span class="text-red-500">*</span>
+                                    </label>
+                                    <input type="text" id="modalFoundItemId"
+                                        class="w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white font-mono text-sm"
+                                        placeholder="Enter the Found Item ID to match...">
+                                    <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">
+                                        This ID must be from an unclaimed found item in the system.
+                                    </p>
+                                    <p id="foundItemIdError" class="mt-1 text-xs text-red-600 dark:text-red-400 hidden">
+                                    </p>
+                                </div>
 
                                 <!-- Reason Textarea -->
                                 <label for="modalStatusReason"
