--- a/src/AdminFoundItemDetails.html
+++ b/src/AdminFoundItemDetails.html
@@ -264,6 +264,14 @@
                             <span class="font-semibold text-gray-800 dark:text-gray-200"
                                 id="matchedLostLocation">--</span>
                         </div>
+                        <div class="bg-green-50 dark:bg-green-900/10 p-4 rounded-lg border-l-4 border-green-500">
+                            <span
+                                class="block text-green-600 dark:text-green-400 text-xs uppercase tracking-wider font-bold mb-2">
+                                <i class="fas fa-calendar-check mr-1"></i>Date Received
+                            </span>
+                            <span class="font-semibold text-gray-800 dark:text-gray-200"
+                                id="matchedDateReceived">--</span>
+                        </div>
                     </div>
                 </div>
 
