Complete matching system: add Found Item ID field to main dashboard, fix matched item display, and add date returned

--- a/src/AdminFoundItemDetails.html
+++ b/src/AdminFoundItemDetails.html
@@ -267,7 +267,7 @@
                         <div class="bg-green-50 dark:bg-green-900/10 p-4 rounded-lg border-l-4 border-green-500">
                             <span
                                 class="block text-green-600 dark:text-green-400 text-xs uppercase tracking-wider font-bold mb-2">
-                                <i class="fas fa-calendar-check mr-1"></i>Date Received
+                                <i class="fas fa-calendar-check mr-1"></i>Date Returned to Owner
                             </span>
                             <span class="font-semibold text-gray-800 dark:text-gray-200"
                                 id="matchedDateReceived">--</span>
