--- a/src/AdminFoundItemDetails.html
+++ b/src/AdminFoundItemDetails.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Found Item Details</title>
-  <script type="module" crossorigin src="../assets/adminFoundItemDetails-B7Q0vTeh.js"></script>
+  <script type="module" crossorigin src="../assets/adminFoundItemDetails-aehivcjQ.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/darkMode-DwWyDh1G.js">
   <link rel="stylesheet" crossorigin href="../assets/darkMode-BHgsM5Wj.css">
 </head>
@@ -269,7 +269,7 @@
                         <div class="bg-green-50 dark:bg-green-900/10 p-4 rounded-lg border-l-4 border-green-500">
                             <span
                                 class="block text-green-600 dark:text-green-400 text-xs uppercase tracking-wider font-bold mb-2">
-                                <i class="fas fa-calendar-check mr-1"></i>Date Received
+                                <i class="fas fa-calendar-check mr-1"></i>Date Returned to Owner
                             </span>
                             <span class="font-semibold text-gray-800 dark:text-gray-200"
                                 id="matchedDateReceived">--</span>
