--- a/src/AdminFoundItemDetails.html
+++ b/src/AdminFoundItemDetails.html
@@ -281,8 +281,12 @@
                     </h4>
                     <div class="bg-gray-50 dark:bg-gray-700/50 p-4 rounded-lg">
                         <div class="flex items-center gap-4 mb-3">
+                            <!-- Initials (Default) -->
                             <div class="w-12 h-12 rounded-full bg-indigo-100 dark:bg-indigo-900/30 flex items-center justify-center text-indigo-600 dark:text-indigo-400 font-bold text-lg"
                                 id="matchedReporterInitials">U</div>
+                            <!-- Profile Picture (Hidden by default) -->
+                            <img id="matchedReporterProfilePic" src="" alt="Profile"
+                                class="w-12 h-12 rounded-full object-cover border-2 border-indigo-100 dark:border-indigo-900 hidden">
                             <div>
                                 <p class="font-bold text-gray-800 dark:text-white" id="matchedReporterName">Loading...
                                 </p>
