--- a/src/AdminFoundItemDetails.html
+++ b/src/AdminFoundItemDetails.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Found Item Details</title>
-  <script type="module" crossorigin src="../assets/adminFoundItemDetails-aehivcjQ.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-DwWyDh1G.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-BHgsM5Wj.css">
+  <script type="module" crossorigin src="../assets/adminFoundItemDetails-dzqBNGGa.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-0kXEi02e.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-BOqewWym.css">
 </head>
 
 <body
@@ -283,8 +283,12 @@
                     </h4>
                     <div class="bg-gray-50 dark:bg-gray-700/50 p-4 rounded-lg">
                         <div class="flex items-center gap-4 mb-3">
+                            <!-- Initials (Default) -->
                             <div class="w-12 h-12 rounded-full bg-indigo-100 dark:bg-indigo-900/30 flex items-center justify-center text-indigo-600 dark:text-indigo-400 font-bold text-lg"
                                 id="matchedReporterInitials">U</div>
+                            <!-- Profile Picture (Hidden by default) -->
+                            <img id="matchedReporterProfilePic" src="" alt="Profile"
+                                class="w-12 h-12 rounded-full object-cover border-2 border-indigo-100 dark:border-indigo-900 hidden">
                             <div>
                                 <p class="font-bold text-gray-800 dark:text-white" id="matchedReporterName">Loading...
                                 </p>
