--- a/src/Mycomplaint.html
+++ b/src/Mycomplaint.html
@@ -28,9 +28,9 @@
     <nav class="hidden md:flex space-x-6 items-center">
       <a href="UserDashboard.html" class="nav-content">Dashboard</a>
       <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-      <a href="Mycomplaint.html"
-        class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">My Complaints</a>
       <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+      <a href="Mycomplaint.html"
+        class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">My History</a>
 
 
 
@@ -68,10 +68,10 @@
       <nav class="mt-6 flex flex-col space-y-2 px-6">
         <a href="UserDashboard.html" class="nav-content">Dashboard</a>
         <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
+        <a href="LostAndFound.html" class="nav-content">Report Lost</a>
         <a href="Mycomplaint.html"
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">My
-          Complaints</a>
-        <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+          History</a>
         <a href="Profile.html" class="nav-content">View Profile</a>
       </nav>
     </div>
@@ -90,7 +90,7 @@
     <div class="flex space-x-6 mb-6 border-b border-gray-200 dark:border-gray-700">
       <button id="tabComplaints"
         class="pb-3 px-2 border-b-2 border-[var(--color-eco)] text-eco-dark dark:text-blue-400 font-semibold focus:outline-none transition-colors">
-        My Complaints
+        My History
       </button>
       <button id="tabLostFound"
         class="pb-3 px-2 border-b-2 border-transparent text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-300 font-medium focus:outline-none transition-colors">
@@ -255,7 +255,8 @@
         <ul class="space-y-2 text-sm">
           <li><a href="./UserDashboard.html" class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
           <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a></li>
-          <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
+          <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Report Lost</a></li>
+          <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My History</a></li>
         </ul>
       </div>
 
