--- a/src/AdminLostFoundDashboard.html
+++ b/src/AdminLostFoundDashboard.html
@@ -22,7 +22,7 @@
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="AdminLostFoundDashboard.html" class="font-semibold text-eco-dark hover:text-eco-dark">Dashboard</a>
-            <a href="AdminLostFound.html" class="nav-content">Lost Items</a>
+            <a href="AdminLostFound.html" class="nav-content">Manage Items</a>
             <!-- No All Complaints here -->
 
             <!-- Profile Menu -->
@@ -56,7 +56,7 @@
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="AdminLostFoundDashboard.html"
                     class="font-semibold text-eco-dark hover:text-eco-dark">Dashboard</a>
-                <a href="AdminLostFound.html" class="nav-content">Lost Items</a>
+                <a href="AdminLostFound.html" class="nav-content">Manage Items</a>
                 <a href="AdminProfile.html" class="nav-content">Admin Profile</a>
             </nav>
         </div>
@@ -296,7 +296,7 @@
                         <a href="AdminLostFound.html"
                             class="inline-flex items-center gap-2 text-gray-800 hover:text-blue-700 dark:text-gray-300 dark:hover:text-blue-400 transition-all duration-300 hover:-translate-y-1">
                             <i class="fas fa-search"></i>
-                            <span>Lost Items</span>
+                            <span>Manage Items</span>
                         </a>
                     </li>
                 </ul>
