--- a/src/FacilityForm.html
+++ b/src/FacilityForm.html
@@ -29,8 +29,8 @@
       <a href="UserDashboard.html" class="nav-content">Dashboard</a>
       <a href="Newcomplaint.html"
         class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New Complaint</a>
-      <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
       <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+      <a href="Mycomplaint.html" class="nav-content">My History</a>
 
       <!-- Profile Menu -->
       <div class="relative">
@@ -67,8 +67,8 @@
         <a href="Newcomplaint.html"
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New
           Complaint</a>
-        <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
         <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+        <a href="Mycomplaint.html" class="nav-content">My History</a>
         <a href="Profile.html" class="nav-content">View Profile</a>
       </nav>
     </div>
@@ -233,7 +233,8 @@
         <ul class="space-y-2 text-sm">
           <li><a href="./UserDashboard.html" class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
           <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a></li>
-          <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
+          <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Report Lost</a></li>
+          <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My History</a></li>
         </ul>
       </div>
 
