--- a/src/LostAndFound.html
+++ b/src/LostAndFound.html
@@ -22,8 +22,10 @@
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="UserDashboard.html" class="nav-content">Dashboard</a>
             <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-            <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
-            <a href="LostAndFound.html" class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Report Lost</a>
+            <a href="LostAndFound.html"
+                class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Report
+                Lost</a>
+            <a href="Mycomplaint.html" class="nav-content">My History</a>
 
             <div class="relative">
                 <button id="profileButton" class="flex items-center space-x-2 focus:outline-none">
@@ -55,8 +57,10 @@
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="UserDashboard.html" class="nav-content">Dashboard</a>
                 <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-                <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
-                <a href="LostAndFound.html" class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Report Lost</a>
+                <a href="LostAndFound.html"
+                    class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Report
+                    Lost</a>
+                <a href="Mycomplaint.html" class="nav-content">My History</a>
                 <a href="Profile.html" class="nav-content">View Profile</a>
             </nav>
         </div>
@@ -293,10 +297,10 @@
                             class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
                     <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New
                             Complaint</a></li>
-                    <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My
-                            Complaints</a></li>
-                    <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Lost &
-                            Found</a></li>
+                    <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Report
+                            Lost</a></li>
+                    <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My History</a>
+                    </li>
                 </ul>
             </div>
 
