--- a/src/Notifications.html
+++ b/src/Notifications.html
@@ -26,8 +26,8 @@
             <nav class="hidden md:flex space-x-6 items-center">
                 <a href="UserDashboard.html" class="nav-content">Dashboard</a>
                 <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-                <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
                 <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+                <a href="Mycomplaint.html" class="nav-content">My History</a>
             </nav>
 
             <!-- Notification Bell (Always Visible) -->
@@ -75,8 +75,8 @@
                 <a href="Notifications.html"
                     class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Notifications</a>
                 <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-                <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
-                <a href="LostAndFound.html" class="nav-content">Lost & Found</a>
+                <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+                <a href="Mycomplaint.html" class="nav-content">My History</a>
                 <a href="Profile.html" class="nav-content">View Profile</a>
             </nav>
         </div>
@@ -200,8 +200,10 @@
                     </li>
                     <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New
                             Complaint</a></li>
+                    <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Report
+                            Lost</a></li>
                     <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My
-                            Complaints</a></li>
+                            History</a></li>
                 </ul>
             </div>
 
