--- a/src/UserDashboard.html
+++ b/src/UserDashboard.html
@@ -30,8 +30,8 @@
         <a href="UserDashboard.html"
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
         <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-        <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
         <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+        <a href="Mycomplaint.html" class="nav-content">My History</a>
       </nav>
 
       <!-- Notification Bell (Always Visible) -->
@@ -78,8 +78,8 @@
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
         <a href="Notifications.html" class="nav-content">Notifications</a>
         <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-        <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
         <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+        <a href="Mycomplaint.html" class="nav-content">My History</a>
         <a href="Profile.html" class="nav-content">View Profile</a>
       </nav>
     </div>
@@ -228,7 +228,8 @@
             <li><a href="./UserDashboard.html" class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
             <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a>
             </li>
-            <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
+            <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Report Lost</a></li>
+            <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My History</a></li>
           </ul>
         </div>
 
