deploy: 43dac21963f1f5ddfe5b3e9b79a216d6aede6292

--- a/src/AdminLostFoundDashboard.html
+++ b/src/AdminLostFoundDashboard.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Lost & Found Dashboard</title>
-  <script type="module" crossorigin src="../assets/adminLostFoundDashboard-DGgWpwux.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-0kXEi02e.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-BOqewWym.css">
+  <script type="module" crossorigin src="../assets/adminLostFoundDashboard-BuFPwJQj.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-JA7tOpVC.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-qNrT6S8F.css">
 </head>
 
 <body
@@ -24,7 +24,7 @@
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="AdminLostFoundDashboard.html" class="font-semibold text-eco-dark hover:text-eco-dark">Dashboard</a>
-            <a href="AdminLostFound.html" class="nav-content">Lost Items</a>
+            <a href="AdminLostFound.html" class="nav-content">Manage Items</a>
             <!-- No All Complaints here -->
 
             <!-- Profile Menu -->
@@ -58,7 +58,7 @@
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="AdminLostFoundDashboard.html"
                     class="font-semibold text-eco-dark hover:text-eco-dark">Dashboard</a>
-                <a href="AdminLostFound.html" class="nav-content">Lost Items</a>
+                <a href="AdminLostFound.html" class="nav-content">Manage Items</a>
                 <a href="AdminProfile.html" class="nav-content">Admin Profile</a>
             </nav>
         </div>
@@ -298,7 +298,7 @@
                         <a href="AdminLostFound.html"
                             class="inline-flex items-center gap-2 text-gray-800 hover:text-blue-700 dark:text-gray-300 dark:hover:text-blue-400 transition-all duration-300 hover:-translate-y-1">
                             <i class="fas fa-search"></i>
-                            <span>Lost Items</span>
+                            <span>Manage Items</span>
                         </a>
                     </li>
                 </ul>
