--- a/src/AdminLostFoundDetails.html
+++ b/src/AdminLostFoundDetails.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Item Details</title>
-  <script type="module" crossorigin src="../assets/adminLostFoundDetails-6KMMQu5Z.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-0kXEi02e.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-BOqewWym.css">
+  <script type="module" crossorigin src="../assets/adminLostFoundDetails-DcYfVLTX.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-JA7tOpVC.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-qNrT6S8F.css">
 </head>
 
 <body
@@ -22,7 +22,7 @@
 
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="AdminLostFoundDashboard.html" class="nav-content">Dashboard</a>
-            <a href="AdminLostFound.html" class="font-semibold text-eco-dark hover:text-eco-dark">Lost Items</a>
+            <a href="AdminLostFound.html" class="font-semibold text-eco-dark hover:text-eco-dark">Manage Items</a>
 
             <div class="relative">
                 <button id="profileButton" class="flex items-center space-x-2 focus:outline-none">
@@ -51,7 +51,7 @@
             </div>
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="AdminLostFoundDashboard.html" class="nav-content">Dashboard</a>
-                <a href="AdminLostFound.html" class="font-semibold text-eco-dark hover:text-eco-dark">Lost Items</a>
+                <a href="AdminLostFound.html" class="font-semibold text-eco-dark hover:text-eco-dark">Manage Items</a>
                 <a href="AdminProfile.html" class="nav-content">Profile</a>
             </nav>
         </div>
@@ -370,7 +370,7 @@
                         <a href="AdminLostFound.html"
                             class="inline-flex items-center gap-2 text-gray-800 hover:text-blue-700 dark:text-gray-300 dark:hover:text-blue-400 transition-all duration-300 hover:-translate-y-1">
                             <i class="fas fa-search"></i>
-                            <span>Lost Items</span>
+                            <span>Manage Items</span>
                         </a>
                     </li>
                 </ul>
