--- a/src/LostAndFound.html
+++ b/src/LostAndFound.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComplaNet — Lost & Found</title>
-  <script type="module" crossorigin src="../assets/lostAndFound-DIuTDirV.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-0kXEi02e.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-BOqewWym.css">
+  <script type="module" crossorigin src="../assets/lostAndFound-D_qVqiTr.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-JA7tOpVC.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-qNrT6S8F.css">
 </head>
 
 <body
@@ -24,8 +24,10 @@
         <nav class="hidden md:flex space-x-6 items-center">
             <a href="UserDashboard.html" class="nav-content">Dashboard</a>
             <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-            <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
-            <a href="LostAndFound.html" class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Report Lost</a>
+            <a href="LostAndFound.html"
+                class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Report
+                Lost</a>
+            <a href="Mycomplaint.html" class="nav-content">My History</a>
 
             <div class="relative">
                 <button id="profileButton" class="flex items-center space-x-2 focus:outline-none">
@@ -57,8 +59,10 @@
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="UserDashboard.html" class="nav-content">Dashboard</a>
                 <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-                <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
-                <a href="LostAndFound.html" class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Report Lost</a>
+                <a href="LostAndFound.html"
+                    class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Report
+                    Lost</a>
+                <a href="Mycomplaint.html" class="nav-content">My History</a>
                 <a href="Profile.html" class="nav-content">View Profile</a>
             </nav>
         </div>
@@ -295,10 +299,10 @@
                             class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
                     <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New
                             Complaint</a></li>
-                    <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My
-                            Complaints</a></li>
-                    <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Lost &
-                            Found</a></li>
+                    <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Report
+                            Lost</a></li>
+                    <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My History</a>
+                    </li>
                 </ul>
             </div>
 
