--- a/src/Mycomplaint.html
+++ b/src/Mycomplaint.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/myComplaints-BPRwHVZ1.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-0kXEi02e.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-BOqewWym.css">
+  <script type="module" crossorigin src="../assets/myComplaints-B__jGvde.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-JA7tOpVC.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-qNrT6S8F.css">
 </head>
 
 <body
@@ -30,9 +30,9 @@
     <nav class="hidden md:flex space-x-6 items-center">
       <a href="UserDashboard.html" class="nav-content">Dashboard</a>
       <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-      <a href="Mycomplaint.html"
-        class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">My Complaints</a>
       <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+      <a href="Mycomplaint.html"
+        class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">My History</a>
 
 
 
@@ -70,10 +70,10 @@
       <nav class="mt-6 flex flex-col space-y-2 px-6">
         <a href="UserDashboard.html" class="nav-content">Dashboard</a>
         <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
+        <a href="LostAndFound.html" class="nav-content">Report Lost</a>
         <a href="Mycomplaint.html"
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">My
-          Complaints</a>
-        <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+          History</a>
         <a href="Profile.html" class="nav-content">View Profile</a>
       </nav>
     </div>
@@ -92,7 +92,7 @@
     <div class="flex space-x-6 mb-6 border-b border-gray-200 dark:border-gray-700">
       <button id="tabComplaints"
         class="pb-3 px-2 border-b-2 border-[var(--color-eco)] text-eco-dark dark:text-blue-400 font-semibold focus:outline-none transition-colors">
-        My Complaints
+        My History
       </button>
       <button id="tabLostFound"
         class="pb-3 px-2 border-b-2 border-transparent text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-300 font-medium focus:outline-none transition-colors">
@@ -257,7 +257,8 @@
         <ul class="space-y-2 text-sm">
           <li><a href="./UserDashboard.html" class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
           <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a></li>
-          <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
+          <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Report Lost</a></li>
+          <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My History</a></li>
         </ul>
       </div>
 
