--- a/src/Notifications.html
+++ b/src/Notifications.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notifications — ComplaNet</title>
-  <script type="module" crossorigin src="../assets/darkMode-0kXEi02e.js"></script>
-  <script type="module" crossorigin src="../assets/notifications-CPlXeoJN.js"></script>
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-BOqewWym.css">
+  <script type="module" crossorigin src="../assets/darkMode-JA7tOpVC.js"></script>
+  <script type="module" crossorigin src="../assets/notifications-B2hb4hwo.js"></script>
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-qNrT6S8F.css">
 </head>
 
 <body
@@ -28,8 +28,8 @@
             <nav class="hidden md:flex space-x-6 items-center">
                 <a href="UserDashboard.html" class="nav-content">Dashboard</a>
                 <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-                <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
                 <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+                <a href="Mycomplaint.html" class="nav-content">My History</a>
             </nav>
 
             <!-- Notification Bell (Always Visible) -->
@@ -77,8 +77,8 @@
                 <a href="Notifications.html"
                     class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Notifications</a>
                 <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-                <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
-                <a href="LostAndFound.html" class="nav-content">Lost & Found</a>
+                <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+                <a href="Mycomplaint.html" class="nav-content">My History</a>
                 <a href="Profile.html" class="nav-content">View Profile</a>
             </nav>
         </div>
@@ -202,8 +202,10 @@
                     </li>
                     <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New
                             Complaint</a></li>
+                    <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Report
+                            Lost</a></li>
                     <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My
-                            Complaints</a></li>
+                            History</a></li>
                 </ul>
             </div>
 
