--- a/src/StudentBehaviorForm.html
+++ b/src/StudentBehaviorForm.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/studentBehaviorForm-CwGaZZuq.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-0kXEi02e.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-BOqewWym.css">
+  <script type="module" crossorigin src="../assets/studentBehaviorForm-DxNaLprv.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-JA7tOpVC.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-qNrT6S8F.css">
 </head>
 
 <body
@@ -31,8 +31,8 @@
       <a href="UserDashboard.html" class="nav-content">Dashboard</a>
       <a href="Newcomplaint.html"
         class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New Complaint</a>
-      <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
       <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+      <a href="Mycomplaint.html" class="nav-content">My History</a>
 
 
 
@@ -72,8 +72,8 @@
         <a href="Newcomplaint.html"
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New
           Complaint</a>
-        <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
         <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+        <a href="Mycomplaint.html" class="nav-content">My History</a>
         <a href="Profile.html" class="nav-content">View Profile</a>
       </nav>
     </div>
@@ -211,7 +211,8 @@
         <ul class="space-y-2 text-sm">
           <li><a href="./UserDashboard.html" class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
           <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a></li>
-          <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
+          <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Report Lost</a></li>
+          <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My History</a></li>
         </ul>
       </div>
 
