--- a/src/TechnicalForm.html
+++ b/src/TechnicalForm.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/technicalForm-D-KooqKf.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-0kXEi02e.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-BOqewWym.css">
+  <script type="module" crossorigin src="../assets/technicalForm-Syqv4czm.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-JA7tOpVC.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-qNrT6S8F.css">
 </head>
 
 <body
@@ -29,10 +29,9 @@
     <!-- Desktop Navigation -->
     <nav class="hidden md:flex space-x-6 items-center">
       <a href="UserDashboard.html" class="nav-content">Dashboard</a>
-      <a href="Newcomplaint.html"
-        class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New Complaint</a>
-      <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+      <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
       <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+      <a href="Mycomplaint.html" class="nav-content">My History</a>
 
 
 
@@ -72,8 +71,8 @@
         <a href="Newcomplaint.html"
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New
           Complaint</a>
-        <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
         <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+        <a href="Mycomplaint.html" class="nav-content">My History</a>
         <a href="Profile.html" class="nav-content">View Profile</a>
       </nav>
     </div>
@@ -200,7 +199,8 @@
         <ul class="space-y-2 text-sm">
           <li><a href="./UserDashboard.html" class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
           <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a></li>
-          <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
+          <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Report Lost</a></li>
+          <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My History</a></li>
         </ul>
       </div>
 
