--- a/src/UserDashboard.html
+++ b/src/UserDashboard.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/userDashboard-BdKc_HME.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-0kXEi02e.js">
-  <link rel="modulepreload" crossorigin href="../assets/notifications-CPlXeoJN.js">
-  <link rel="stylesheet" crossorigin href="../assets/darkMode-BOqewWym.css">
+  <script type="module" crossorigin src="../assets/userDashboard-BCsWcBUi.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-JA7tOpVC.js">
+  <link rel="modulepreload" crossorigin href="../assets/notifications-B2hb4hwo.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-qNrT6S8F.css">
 </head>
 
 <body
@@ -33,8 +33,8 @@
         <a href="UserDashboard.html"
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
         <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-        <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
         <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+        <a href="Mycomplaint.html" class="nav-content">My History</a>
       </nav>
 
       <!-- Notification Bell (Always Visible) -->
@@ -81,8 +81,8 @@
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
         <a href="Notifications.html" class="nav-content">Notifications</a>
         <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
-        <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
         <a href="LostAndFound.html" class="nav-content">Report Lost</a>
+        <a href="Mycomplaint.html" class="nav-content">My History</a>
         <a href="Profile.html" class="nav-content">View Profile</a>
       </nav>
     </div>
@@ -231,7 +231,8 @@
             <li><a href="./UserDashboard.html" class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
             <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a>
             </li>
-            <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
+            <li><a href="./LostAndFound.html" class="hover:text-blue-700 dark:hover:text-blue-400">Report Lost</a></li>
+            <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My History</a></li>
           </ul>
         </div>
 
